# guard-proxy

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.architecture.md  README.commands.md  README.md  README.testing.md  README.waf-rules.md  progress.md  progress_tracker.md
src/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
src/backend/alembic/: README  env.py
src/backend/alembic/versions/: 0bc86f680ecc_add_certificate_management_to_vhosts.py  13e761207c57_create_initial_tables.py  1f4a7f0f9a11_add_rule_override_unique_constraint.py  2c9b5f4e8d31_add_policy_and_vhost_check_constraints.py  473d83df7b55_add_ddos_protection_fields_to_policies.py  5e2d7c9a1b34_create_policy_bindings_table.py  6b5c4a3d2e10_add_runtime_operations_table.py  7da7bf17f2b8_create_custom_rules_table.py  7e0f9c2c9e62_add_logs_table.py  8d4f2a6c1b90_split_policy_anomaly_thresholds.py  a43bc7e65317_create_rule_exclusions_table.py  b7c4d8e9f012_create_vhost_backends_table.py  c7a2e5b8f1d0_redesign_logs_table_for_event_model.py  d4e9f3a1b2c5_add_vhost_id_policy_id_to_logs.py  ea9292cbacec_add_auto_ban_fields_to_policies.py
src/backend/app/: config.py  database.py  dependencies.py  main.py  passwords.py  rate_limit.py
src/backend/app/models/: __init__.py  custom_rule.py  log.py  policy.py  policy_binding.py  rule_exclusion.py  rule_override.py  runtime_operation.py  user.py  (+2 more)
src/backend/scripts/: manage_users.py  seed_admin.py
src/backend/tests/: conftest.py
src/log-shipper/: Dockerfile  docker-entrypoint.sh  pyproject.toml
src/log-shipper/app/: __init__.py  config.py  mapping.py  shipper.py
src/log-shipper/tests/: test_mapping.py
(+297 files in other folders)
